src/test/deca/context/invalid/created/binary exp/modulo_int_float.deca
// Description :
//    test modulo entre un int et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: L’opérande gauche est de type int. L’opérande droite est de type float. Or les opérandes d’un modulo doivent être de type ‘int’

{
int a;
float b;
int c = a % b;
}